Updated Thesis section Search Cost vs. Distance

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -87,6 +87,10 @@
 που περιγράφεται στην ενότητα \ref{sec:cost_metric} 
 μετρώντας τον αριθμό κλήσεων των ρουτινών 
 \tl{\texttt{triangle\_distance()}} και \tl{\texttt{AABB\_distance()}}.
+Σημειώνεται πως η καταμέτρηση των κλήσεων στις παραπάνω ρουτίνες 
+πραγματοποιήθηκε για τη σειριακή εκτέλεση των αλγορίθμων, και συγκεκριμένα 
+του αλγορίθμου \ref{alg:queries_on_tree}, αφού ο αλγόριθμος 
+\ref{alg:search_on_two_trees} δεν είναι παράλληλος εκ κατασκευής.
 
 Ο συνολικός χρόνος εκτέλεσης ερωτημάτων απόστασης περιλαμβάνει 
 το χρόνο προεπεξεργασίας των δεδομένων και τον χρόνο αναζήτησης.
@@ -199,22 +203,45 @@
 "Αεροπλάνα" με περίπου $1.5 * 10^6$ τρίγωνα το καθένα.
 Η αρχική θέση των αντικειμένων είναι αυτή που απεικονίζεται 
 στην εικόνα \ref{}.
-Έπειτα μετακινείται το αντικείμενο ένα αεροπλάνο 
-προς μια συγκεκριμένη κατεύθυνση ώστε να απομακρύνεται 
-από το άλλο.
+Έπειτα το ένα αεροπλάνο μετακινείται 
+προς μια κατεύθυνση τέτοια ώστε να απομακρύνεται 
+από το άλλο αεροπλάνο.
+
+Στην εικόνα \ref{fig:cost_metric_vs_distance} 
+σχεδιάζεται το κόστος αναζήτησης συναρτήσει της 
+κανονικοποιημένης απόστασης των αντικειμένων, 
+ενώ στην εικόνα \ref{} παρουσιάζεται ο χρόνος 
+αναζήτησης (μόνο) συναρτήσει της κανονικοποιημένης
+απόστασης. 
+Η απόσταση είναι κανονικοποιημένη και ίση με 
+$\frac{dist}{diagonal}$, όπου $dist$ η πραγματική 
+απόσταση των αντικειμένων και $diagonal$ το μήκος 
+της διαγωνίου του \tl{AABB} του αεροπλάνου.
+
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{cost_vs_distance.pdf}
     \caption[Κόστος Αναζήτησης Συναρτήσει της Απόστασης"] {
         Κόστος αναζήτησης συναρτήσει της απόστασης.
-        Η απόσταση είναι κανονικοποιημένη και ίση με 
-        $\frac{dist}{diagonal}$, όπου $dist$ η πραγματική 
-        απόσταση των αντικειμένων και $diagonal$ το μήκος 
-        της διαγωνίου του \tl{AABB} του αεροπλάνου.
         Τα αντικείμενα ανήκουν στη σκηνή "αεροπλάνα".
     }
+    \label{fig:cost_metric_vs_distance}
 \end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{search_time_vs_distance.pdf}
+    \caption[Χρόνος Αναζήτησης Συναρτήσει της Απόστασης"] {
+        Χρόνος αναζήτησης συναρτήσει της απόστασης.
+        Τα αντικείμενα ανήκουν στη σκηνή "αεροπλάνα".
+        \textit{Σημείωση}: Ο αλγόριθμος που χρησιμοποιεί δύο \tl{sKD-Trees} δεν 
+        είναι παράλληλος.
+    }
+    \label{fig:cost_metric_vs_distance}
+\end{figure}
+
+
 
 
 % να προσθέσω ποσοστά χρόνου αναζήτησης/κατασκευής
