--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -58,7 +58,37 @@
 δημιουργία των πλεγμάτων χρησιμοποιήθηκε το πρόγραμμα 
 \tl{BETA CAE SYSTEMS - Ansa v21.0.0}.
 
-% TODO: ADD PHOTOS OF EACH SCENARIO
+\begin{figure}[H]
+    \begin{subfigure}{0.49\textwidth}
+        \includegraphics[width=0.9\textwidth]{testcase_scenes/airplanes_scene.png}
+        \caption{Αεροπλάνα}
+    \end{subfigure}
+    \begin{subfigure}{0.49\textwidth}
+        \includegraphics[width=0.9\textwidth]{testcase_scenes/scooby_w_bunny_scene.png}
+        \caption{\tl{Scooby} με \tl{Stanford Bunny}}
+    \end{subfigure}
+    \begin{subfigure}{0.49\textwidth}
+        \includegraphics[width=0.9\textwidth]{testcase_scenes/cylinders_scene.png}
+        \caption{Ομοαξονικοί ημι-κύλινδροι}
+    \end{subfigure}
+    \begin{subfigure}{0.49\textwidth}
+        \includegraphics[width=0.9\textwidth]{testcase_scenes/chained_tori_scene.png}
+        \caption{Αλυσιδωτοί Τόροι}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}{0.49\textwidth}
+        \includegraphics[width=0.9\textwidth]{testcase_scenes/colliding_tori_scene.png}
+        \caption{Συγκρουόμενοι Τόροι}
+    \end{subfigure}
+    \caption[Οπτική αναπαράσταση των σεναρίων των πειραμάτων]{
+        Οπτική αναπαράσταση των σεναρίων που χρησιμοποιήθηκαν για την 
+        εκτέλεση των πειραμάτων της παρούσας εργασίας.
+        Κάθε σενάριο αποτελείται από μία σκηνή με δύο αντικείμενα.  
+        Το κόκκινο ευθύγραμμο τμήμα αναπαριστά την Ευκλείδεια απόσταση 
+        των αντικειμένων.
+    }
+    \label{fig:scenarios_photos}
+\end{figure}
 
 \section{Χρόνος Κατασκευής του \tl{sKD-Tree}}
 Στο σχήμα \ref{fig:build_time} παρουσιάζονται οι μετρήσεις του 
@@ -202,7 +232,7 @@
 Για το πείραμα αυτό επιλέχθηκαν τα αντικείμενα της σκηνής 
 "Αεροπλάνα" με περίπου $1.5 * 10^6$ τρίγωνα το καθένα.
 Η αρχική θέση των αντικειμένων είναι αυτή που απεικονίζεται 
-στην εικόνα \ref{}.
+στην εικόνα \ref{fig:scenarios_photos}.
 Έπειτα το ένα αεροπλάνο μετακινείται 
 προς μια κατεύθυνση τέτοια ώστε να απομακρύνεται 
 από το άλλο αεροπλάνο.
@@ -210,9 +240,9 @@
 Στην εικόνα \ref{fig:cost_metric_vs_distance} 
 σχεδιάζεται το κόστος αναζήτησης συναρτήσει της 
 κανονικοποιημένης απόστασης των αντικειμένων, 
-ενώ στην εικόνα \ref{} παρουσιάζεται ο χρόνος 
-αναζήτησης (μόνο) συναρτήσει της κανονικοποιημένης
-απόστασης. 
+ενώ στην εικόνα \ref{fig:search_time_vs_distance} 
+παρουσιάζεται ο χρόνος αναζήτησης (μόνο) συναρτήσει 
+της κανονικοποιημένης απόστασης. 
 Η απόσταση είναι κανονικοποιημένη και ίση με 
 $\frac{dist}{diagonal}$, όπου $dist$ η πραγματική 
 απόσταση των αντικειμένων και $diagonal$ το μήκος 
@@ -238,7 +268,7 @@ $\frac{dist}{diagonal}$, όπου $dist$ η πραγματική
         \textit{Σημείωση}: Ο αλγόριθμος που χρησιμοποιεί δύο \tl{sKD-Trees} δεν 
         είναι παράλληλος.
     }
-    \label{fig:cost_metric_vs_distance}
+    \label{fig:search_time_vs_distance}
 \end{figure}
 
 
