added data tables on appendix

--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -50,13 +50,17 @@
 των αντικειμένων για κάθε συνδυασμό ανάλυσης (σύνολο 9 μετρήσεις).
 Έγινε προσπάθεια συμπερίληψης διάφορων περιπτώσεων, με αντικείμενα 
 διαφόρων σχημάτων, διαστάσεων και προσανατολισμού.
+Στην εικόνα \ref{fig:scenarios_photos} παρουσιάζεται η διάταξη  
+των αντικειμένων για κάθε σενάριο.
+Τέλος, στον πίνακα \ref{tab:objects_resolutions}
+αναγράφεται ο αριθμός τριγώνων για κάθε αντικείμενο και ανάλυση.
 
 Η λήψη των αντικειμένων που χρησιμοποιούνται σε αυτή την εργασία 
 έγινε από το \tl{GrabCAD}\cite{GrabCAD} και το \tl{3D Content Central}
 \cite{3dcontentcentral}. 
 Τα αντικείμενα, αρχικά, ήταν σε μορφή \tl{\texttt{IGES}}, ενώ για τη 
-δημιουργία των πλεγμάτων χρησιμοποιήθηκε το πρόγραμμα 
-\tl{BETA CAE SYSTEMS - Ansa v21.0.0}.
+δημιουργία των πλεγμάτων και την τοποθέτηση τους στον χώρο χρησιμοποιήθηκε 
+το πρόγραμμα \tl{BETA CAE SYSTEMS - Ansa v21.0.0}.
 
 \begin{figure}[H]
     \begin{subfigure}{0.49\textwidth}
@@ -89,6 +93,8 @@
     }
     \label{fig:scenarios_photos}
 \end{figure}
+
+
 
 \section{Χρόνος Κατασκευής του \tl{sKD-Tree}}
 Στο σχήμα \ref{fig:build_time} παρουσιάζονται οι μετρήσεις του 
@@ -128,6 +134,10 @@
 ανάλογα με τον αλγόριθμο που χρησιμοποιείται.
 Οι χρόνοι που παρουσιάζονται αντιστοιχούν σε πειράματα με χρήση 
 ενός, τεσσάρων και οκτώ νημάτων επεξεργασίας.
+
+Στο παράρτημα \ref{apndx:table_results} παρουσιάζονται πολλά από 
+τα παρακάτω αποτελέσματα σε μορφή πινάκων, ώστε να γίνει μια πιο 
+αναλυτική περιγραφή.
 
 \subsection{Αεροπλάνα}
 
