--- a/report/DOCUMENT/main.tex
+++ b/report/DOCUMENT/main.tex
@@ -19,6 +19,8 @@
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage[ruled,nosemicolon,linesnumbered]{algorithm2e}
+\usepackage{pgfplotstable}
+\usepackage{csvsimple}
 \let\oldnl\nl% Store \nl in \oldnl
 \newcommand{\nonl}{\renewcommand{\nl}{\let\nl\oldnl}}% Remove line number for one line
 
@@ -54,6 +56,7 @@
 
 \appendix
 \include{acronyms}
+\include{data_tables}
 
 \selectlanguage{english}
 
