--- a/report/DOCUMENT/chapter_experiments.tex
+++ b/report/DOCUMENT/chapter_experiments.tex
@@ -121,7 +121,7 @@
 
 Το κόστος αναζήτησης υπολογίστηκε από τη μετρική κόστους 
 που περιγράφεται στην ενότητα \ref{sec:cost_metric} 
-μετρώντας τον αριθμό κλήσεων των ρουτινών 
+μετρώντας τον αριθμό των κλήσεων στις ρουτίνες 
 \tl{\texttt{triangle\_distance()}} και \tl{\texttt{AABB\_distance()}}.
 Σημειώνεται πως η καταμέτρηση των κλήσεων στις παραπάνω ρουτίνες 
 πραγματοποιήθηκε για τη σειριακή εκτέλεση των αλγορίθμων, και συγκεκριμένα 
@@ -239,6 +239,7 @@
 
 
 \section{Σχέση Απόστασης - Κόστους Αναζήτησης}
+\label{sec:dist_vs_cost}
 Για το πείραμα αυτό επιλέχθηκαν τα αντικείμενα της σκηνής 
 "Αεροπλάνα" με περίπου $1.5 * 10^6$ τρίγωνα το καθένα.
 Η αρχική θέση των αντικειμένων είναι αυτή που απεικονίζεται 
@@ -282,6 +283,7 @@ $\frac{dist}{diagonal}$, όπου $dist$ η πραγματική
 \end{figure}
 
 \section{\tl{Profiling} Αλγορίθμων}
+\label{sec:profiling}
 Στα παρακάτω διαγράμματα παρουσιάζονται τα δύο στάδια των 
 αλγορίθμων, δηλαδή της προεπεξεργασίας και της αναζήτησης,
 ως ποσοστά του συνολικού χρόνου εκτέλεσης. 
