--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -505,7 +505,15 @@ $R = \{T_i  \mid  RP_{ik} \geq m \}$
 τέτοια ώστε 
 $|L| = \lceil n/2 \rceil$ και $|R| = \lfloor n/2 \rfloor$.
 Για τον διαχωρισμό των τριγώνων χρησιμοποιείται ο 
-αλγόριθμος \texttt{\tl{QUICKSELECT}} \cite{hoare1961algorithm}.
+αλγόριθμος \tl{\texttt{QUICKSELECT}} \cite{hoare1961algorithm}.
+Αναφέρουμε επίσης ότι η ιδέα του διαχωρισμού των τριγώνων με 
+βάση τη διάμεσο των αντιπροσωπευτικών τους σημείων πηγάζει από 
+το γεγονός ότι τα πλέγματα, στις περισσότερες εφαρμογές τους,
+έχουν καλή ποιότητα (κεφάλαιο \ref{sec:bvh}).
+Έχοντας πλέγματα/επιφάνειες με ομοιόμορφα στοιχεία, χωρίζοντας τα σε 
+δύο υποσύνολα με τον παραπάνω τρόπο αναμένουμε πως τα δύο \tl{AABB}
+που θα προκύψουν θα έχουν περίπου ίδιο μέγεθος και μικρή επικάλυψη 
+μεταξύ τους.
 
 Τα παραπάνω συνοψίζονται στους αλγορίθμους \ref{alg:tree_construction} και 
 \ref{alg:tree_construction_recursive}.
@@ -577,7 +585,7 @@ $\bigO(n*logn)$, όπου $n$ είναι ο αριθμός των τριγώνω
 \DecMargin{1.5em}
 \selectlanguage{greek}
 
-Στην εικόνα \ref{fig:tree_construction} φαίνεται ο τρόπος με τον  
+Στο σχήμα \ref{fig:tree_construction} φαίνεται ο τρόπος με τον  
 οποίο κατασκευάζεται ένα \tl{sKD-Tree}.
 
 \begin{figure}[h]
@@ -786,7 +794,7 @@ $\bigO(n*logn)$, όπου $n$ είναι ο αριθμός των τριγώνω
     παιδί και έπειτα στο αριστερό.
     \item[γραμμές 11,19] Έλεγχος για το αν είναι απαραίτητη 
     η επίσκεψη στο παιδί που δεν επιλέχθηκε προηγουμένως.
-    \item[γραμμές 8,16] Πρόωρο τερματισμό της 
+    \item[γραμμές 8,16] Πρόωρος τερματισμός της 
     αναζήτησης (\tl{early exit}). 
     Αυτό είναι χρήσιμο όταν ένας κόμβος δεν μπορεί να 
     απορριφθεί κατά την αναζήτηση, όμως μπορούν να 
@@ -1085,6 +1093,13 @@ $nthreads \geq 2^{depth-1}$, όπου $depth$ είναι το βάθος του
 χρήση \tl{\textit{lock}}, το κάθε νήμα εκτελεί τις γραμμές 3-9 
 του αλγορίθμου με μια τοπική μεταβλητή \tl{\texttt{local\_distance}}.
 Στο τέλος, επιστρέφεται η μικρότερη από αυτές.
+
+Ο αλγόριθμος \ref{alg:search_on_two_trees} μπορεί επίσης να 
+μετατραπεί σε παράλληλο εάν κατασκευάσουμε τα δύο \tl{sKD-Tree}
+παράλληλα. Δηλαδή, τα μισά νήματα του συστήματος χρησιμοποιούνται 
+για την κατασκευή του πρώτου δέντρου, και τα άλλα μισά για το δεύτερο 
+δέντρο. Όμως, σε αυτόν τον αλγόριθμο, η αναζήτηση δεν μπορεί να γίνει 
+παράλληλα.
 
 \paragraph{Απλοποίηση Πράξεων}
 Σε όλους τους παραπάνω αλγορίθμους μπορούμε να αντικαταστήσουμε 
