Wrote Future Work

--- a/report/DOCUMENT/acronyms.tex
+++ b/report/DOCUMENT/acronyms.tex
@@ -8,8 +8,10 @@
   \item[CAE] Computer Aided Engineering
   \item[DFS] Depth First Search
   \item[FEA] Finite Element Analysis
+  \item[LSS] Line Swept Sphere
   \item[MBR] Minimum Bounding Rectangle
   \item[OBB] Oriented Bounding Box
+  \item[RSS] Rectangle Swept Sphere 
   \item[SAH] Surface Area Heuristic
   \item[SAT] Separating Axis Theorem 
 \end{description}
