--- a/report/DOCUMENT/chapter_future_work.tex
+++ b/report/DOCUMENT/chapter_future_work.tex
@@ -7,7 +7,7 @@
 ανήκει στην οικογένεια των Ιεραρχιών Οριοθετικών Όγκων, το \tl{sKD-Tree}, 
 και προτείναμε δύο αλγορίθμους που κάνουν χρήση αυτής της δομής.
 Οι αλγόριθμοι που σχεδιάσαμε γενικεύονται και για άλλα ήδη πλεγμάτων 
-πέραν των τριγωνικών, υπό τις προϋποθέσεις που στο κεφάλαιο \ref{ch:methodology}.
+πέραν των τριγωνικών, υπό τις προϋποθέσεις του κεφαλαίου \ref{ch:methodology}.
 Στη συνέχεια παρουσιάσαμε τα αποτελέσματα της εφαρμογής των αλγορίθμων 
 μας σε μια σειρά από σενάρια ελέγχου που κατασκευάσαμε.
 Με τα παραπάνω αποτελέσματα περιγράφουμε την επίδοση 
@@ -84,3 +84,34 @@
 
 
 \section{Μελλοντική Εργασία}
+Κλείνοντας αυτή την εργασία, θα αναφέρουμε κάποιες κατευθύνσεις που μπορούν 
+να επεκτείνουν ή και να βελτιώσουν την προτεινόμενη μεθοδολογία.
+
+Αρχικά, όπως αναφέρθηκε παραπάνω, το μεγαλύτερο ποσοστό του χρόνου εκτέλεσης 
+καταλαμβάνεται από την κατασκευή του δέντρου. 
+Πιθανόν, η σχεδίαση αλγορίθμων κατασκευής του \tl{sKD-Tree} υλοποιημένοι 
+για \tl{GPU} να μειώσουν τον χρόνο προεπεξεργασίας.
+Επιπλέον, αξίζει και η έρευνα για τη σχεδίαση αλγορίθμων που εκτελούν παράλληλα 
+ερωτήματα στο δέντρο, υλοποιημένοι για \tl{GPU}.
+
+Για τον αλγόριθμο \ref{alg:queries_on_tree}, κατά τα πειράματα, παρατηρήθηκε ότι 
+η επιλογή του αντικειμένου στο οποίο κατασκευάζεται το \tl{sKD-Tree} έχει 
+επίδραση στον συνολικό χρόνο εκτέλεσης.
+Επομένως, η χρήση κάποιας ευρετικής μεθόδου ικανή να "προβλέπει" γρήγορα
+σε ποιο αντικείμενο αξίζει να κατασκευαστεί το δέντρο, μπορεί να βελτιώσει 
+τον συνολικό χρόνο εκτέλεσης του αλγορίθμου. 
+Μια μέθοδος που φαίνεται να λειτουργεί σωστά, όταν το μέγεθος των τριγώνων 
+των δύο μοντέλων είναι παρόμοιο, βασίζεται στην \tl{SAH}.
+Δηλαδή, τον λόγο του πλήθους των τριγώνων του μοντέλου προς το εμβαδόν 
+της επιφάνειας του \tl{AABB} του. 
+Η επιλογή κατασκευής του δέντρου στο αντικείμενο με τη μεγαλύτερη τιμή 
+του παραπάνω λόγου φαίνεται να λειτουργεί σωστά, χωρίς όμως να έχουμε 
+επαρκή δεδομένα για να το επιβεβαιώσουμε.
+
+Τέλος, θεωρούμε πως αξίζει να διερευνηθεί η χρήση διαφορετικών οριοθετικών 
+όγκων, πέραν των \tl{AABB} και να γίνει σύγκριση του συνολικού χρόνου εκτέλεσης
+των αλγορίθμων.
+Ιδιαίτερο ενδιαφέρον έχουν τα \tl{OBB, LSS} και \tl{RSS}.
+
+
+
