Wrote Thank You

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -915,7 +915,7 @@ $\bigO(n*logn)$, όπου $n$ είναι ο αριθμός των τριγώνω
 \selectlanguage{english}
 \IncMargin{1.5em}
 \begin{algorithm}[h]
-    \caption[Απόσταση Τριγωνικών Πλεγμάτων με Δύο tl{sKD-Tree}]{
+    \caption[Απόσταση Τριγωνικών Πλεγμάτων με Δύο \tl{sKD-Tree}]{
         \tg{
             Απόσταση Τριγωνικών Πλεγμάτων με Δύο \tl{sKD-Tree}}
         }
@@ -939,9 +939,9 @@ $\bigO(n*logn)$, όπου $n$ είναι ο αριθμός των τριγώνω
 \selectlanguage{english}
 \IncMargin{1.5em}
 \begin{algorithm}[h]
-    \caption[Απόσταση Τριγωνικών Πλεγμάτων με Δύο tl{sKD-Tree}]{
+    \caption[Απόσταση Τριγωνικών Πλεγμάτων με Δύο \tl{sKD-Tree} Αναδρομή]{
         \tg{
-            Απόσταση Τριγωνικών Πλεγμάτων με Δύο \tl{sKD-Tree}}
+            Απόσταση Τριγωνικών Πλεγμάτων με Δύο \tl{sKD-Tree} Αναδρομικά}
         }
     \label{alg:search_on_two_trees_recursive}
     \DontPrintSemicolon
