--- a/report/DOCUMENT/cover.tex
+++ b/report/DOCUMENT/cover.tex
@@ -113,6 +113,29 @@ Bounding Volumes Hierarchies}
 \section*{Ευχαριστίες}
 \thispagestyle{empty}
 
-Άδειο
+Με την παρούσα διπλωματική εργασία ολοκληρώνω τις σπουδές μου 
+στο τμήμα Ηλεκτρολόγων Μηχανικών και Μηχανικών Η/Υ του Α.Π.Θ. 
+Θα ήθελα να ευχαριστήσω τον καθηγητή μου Νικόλαο Πιτσιάνη 
+όχι μόνο για τις γνώσεις που μου παρείχε αυτά τα χρόνια, αλλά 
+και για την καταλυτική συνδρομή του στο να ανακαλύψω τα ενδιαφέροντα 
+μου μέσα στο ευρύ φάσμα δραστηριοτήτων ενός μηχανικού υπολογιστών.
+
+Ευχαριστώ τους γονείς μου Βασίλη και Νίκη καθώς και την αδερφή μου 
+Δήμητρα, για τη συμπαράσταση τους σε όλο αυτό το ταξίδι και για την εμπιστοσύνη 
+που μου έδειξαν από την πρώτη στιγμή.
+
+Πολλά ευχαριστώ στον φίλο μου, και συνάδελφο, Μανώλη, που με βοήθησε να 
+εξελιχθώ σε όλους τους τομείς της ζωής μου.
+
+Ευχαριστώ την οικογένεια Καραγεωργίου, η οποία στάθηκε δίπλα μου σαν 
+δεύτερη οικογένεια.
+Ιδιαίτερα ευχαριστώ τον Λάζαρο και τον Ιωσήφ, που με τον τρόπο τους, 
+με βοήθησαν να βελτιωθώ και έπαιξαν σημαντικό ρόλο στις αποφάσεις 
+που πήρα μέχρι τώρα και στις αποφάσεις που θα πάρω στο μέλλον.
+
+Τέλος, ευχαριστώ όλους τους φίλους, συναδέλφους και γνωστούς που πέρασα 
+μαζί τους στιγμές τις οποίες θα θυμάμαι για πάντα,
+όταν θα σκέφτομαι τα φοιτητικά μου χρόνια.
+
 
 \clearpage
