minor fixes on thesis text

--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -135,6 +135,6 @@
 κόστους που ορίζεται στην ενότητα \ref{sec:cost_metric} καθώς και τους χρόνους
 εκτέλεσης των αλγορίθμων. 
 
-Στο \textbf{Κεφάλαιο \ref{ch:future_work}} σχολιάζονται τα αποτελέσματα
+Στο \textbf{Κεφάλαιο \ref{ch:conclusion}} σχολιάζονται τα αποτελέσματα
 και παρουσιάζονται σκέψεις για μελλοντική επέκταση και βελτίωση των 
 ιδεών της παρούσας διπλωματικής εργασίας.
