--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -847,7 +847,7 @@ $\bigO(n*logn)$, όπου $n$ είναι ο αριθμός των τριγώνω
         $T_P \gets$ \trias($P$) \;
         $tree \gets \treebuild(Q)$ \;
         $distance \gets \inf$ \;
-        \ForEach{$p \in T_Q$}{
+        \ForEach{$p \in T_P$}{
             $result \gets \nearestsearch(tree, p, distance)$ \;
             \If{$result < distance$}{
                 $distance \gets result$ \;
