removed boxes arround links

--- a/report/DOCUMENT/chapter_theoretical_background.tex
+++ b/report/DOCUMENT/chapter_theoretical_background.tex
@@ -288,7 +288,7 @@ H \textit{Ιεραρχία Οριοθετικών Όγκων} (\tl{\textbf{Bound
     Η επιλογή καθορίζεται από μια σύμβαση μεταξύ δύο στόχων: 
     Από τη μία πλευρά, θα θέλαμε να χρησιμοποιήσουμε
     οριοθετικούς όγκους που έχουν πολύ απλό σχήμα γιατί η αποθήκευση τους 
-    στη μνήνη είναι μικρή και οι διάφοροι γεωμετρικοί έλεγχοι είναι 
+    στη μνήμη είναι μικρή και οι διάφοροι γεωμετρικοί έλεγχοι είναι 
     γρήγοροι.
     Από την άλλη πλευρά, θα θέλαμε να έχουμε οριοθετικούς όγκους που να
     περικλείουν πολύ στενά τα αντικείμενα.
