--- a/report/DOCUMENT/main.tex
+++ b/report/DOCUMENT/main.tex
@@ -2,10 +2,10 @@
 \usepackage[left=3cm,right=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[english,greek]{babel}
+\usepackage[english, greek]{babel}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage[parfill]{parskip}
-\usepackage[unicode]{hyperref}
+\usepackage[unicode,hidelinks]{hyperref}
 \usepackage{bookmark}
 \usepackage{cite}
 \usepackage{graphicx}
