Changed pragmatikes to realistikes

--- a/report/DOCUMENT/chapter_introduction.tex
+++ b/report/DOCUMENT/chapter_introduction.tex
@@ -81,7 +81,7 @@
 Ο τετριμμένος αλγόριθμος, που βασίζεται στον ορισμό, υπολογίζει την απόσταση 
 κάθε πιθανού ζεύγους τριγώνων και επιλέγει την ελάχιστη. Τέτοιοι αλγόριθμοι 
 εξαντλητικής αναζήτησης περιγράφονται στο \ref{sec:exhaustive_search}, όμως
-είναι αδύνατο να χρησιμοποιηθούν σε πραγματικές εφαρμογές. O λόγος είναι η μεγάλη
+είναι αδύνατο να χρησιμοποιηθούν σε ρεαλιστικές εφαρμογές. O λόγος είναι η μεγάλη
 υπολογιστική τους πολυπλοκότητα της τάξης $\bigO(N \cdot M)$ (όπου $N$, $M$ το 
 πλήθος των τριγώνων των συνόλων $X$, $Y$ αντίστοιχα).
 
