--- a/report/DOCUMENT/chapter_related_work.tex
+++ b/report/DOCUMENT/chapter_related_work.tex
@@ -192,7 +192,7 @@ $M$ δεν είναι υπερβολικά μεγάλο (για παράδειγ
 $\bigO(M)$, με μικρό συντελεστή πολυπλοκότητας, σύμφωνα με τα πειράματα που 
 έχουν γίνει. 
 
-Σε πραγματικές εφαρμογές, τα αντικείμενα συνήθως δεν είναι κυρτά.
+Σε ρεαλιστικές εφαρμογές, τα αντικείμενα συνήθως δεν είναι κυρτά.
 Για τον υπολογισμό της απόστασης μεταξύ μη-κυρτών αντικειμένων, 
 μπορούμε να διαχωρίσουμε τα αντικείμενα σε κυρτά μέρη και 
 στη συνέχεια να χρησιμοποιήσουμε οποιονδήποτε από τους παραπάνω
