--- a/report/DOCUMENT/chapter_theoretical_background.tex
+++ b/report/DOCUMENT/chapter_theoretical_background.tex
@@ -86,7 +86,7 @@
     Η μέθοδος υπολογισμού ποικίλλει ανάλογα με τον τύπο κελιού.
 \end{itemize}
 
-Σε πραγματικές εφαρμογές, τα πλέγματα συνήθως σχεδιάζονται έτσι ώστε 
+Σε ρεαλιστικές εφαρμογές, τα πλέγματα συνήθως σχεδιάζονται έτσι ώστε 
 να μην παραβιάζουν σε μεγάλο βαθμό τις παραπάνω μετρικές ποιότητας.
 Αυτή η παρατήρηση είναι χρήσιμη για τον σχεδιασμό της δομής δεδομένων 
 που προτείνουμε.
