--- a/report/DOCUMENT/main.tex
+++ b/report/DOCUMENT/main.tex
@@ -2,6 +2,7 @@
 \usepackage[left=3cm,right=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+% \usepackage{fontspec}
 \usepackage[english, greek]{babel}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage[parfill]{parskip}
