Added citations to some images

--- a/report/DOCUMENT/chapter_theoretical_background.tex
+++ b/report/DOCUMENT/chapter_theoretical_background.tex
@@ -6,7 +6,7 @@
     \centering
     \includegraphics[width=0.25\textwidth]{Dolphin_triangle_mesh.png}
     \caption[Παράδειγμα Τριγωνικού Πλέγματος]{
-        Παράδειγμα τριγωνικού πλέγματος που αναπαριστά ένα δελφίνι.
+        Παράδειγμα τριγωνικού πλέγματος που αναπαριστά ένα δελφίνι \cite{enwiki:1097100057}.
     }
     \label{fig:example_mesh}
 \end{wrapfigure}
@@ -261,7 +261,7 @@ H \textit{Ιεραρχία Οριοθετικών Όγκων} (\tl{\textbf{Bound
         για οριοθετικούς όγκους.
         Αριστερά απεικονίζονται τα αντικείμενα και τα οριοθετικά 
         πλαίσια που περικλείουν τα αντικείμενα. Δεξιά απεικονίζεται 
-        η ιεραρχία σε μορφή δέντρου.
+        η ιεραρχία σε μορφή δέντρου \cite{enwiki:1094757939}.
         }
     \label{fig:bvh_example_2d}
 \end{figure}
