--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -395,3 +395,43 @@
   howpublished = {\url{https://www.3dcontentcentral.com/}},
 
 }
+
+@misc{ enwiki:1094757939,
+  author = "{Wikipedia contributors}",
+  title = "Bounding volume hierarchy --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Bounding_volume_hierarchy&oldid=1094757939}",
+  note = "[Online; accessed 25-November-2022]"
+}
+
+@misc{ enwiki:1097100057,
+  author = "{Wikipedia contributors}",
+  title = "Polygon mesh --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Polygon_mesh&oldid=1097100057}",
+  note = "[Online; accessed 25-November-2022]"
+}
+
+@misc{ enwiki:1110569741,
+  author = "{Wikipedia contributors}",
+  title = "Octree --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Octree&oldid=1110569741}",
+  note = "[Online; accessed 25-November-2022]"
+}
+
+@misc{ enwiki:1123048069,
+  author = "{Wikipedia contributors}",
+  title = "R-tree --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=R-tree&oldid=1123048069}",
+  note = "[Online; accessed 25-November-2022]"
+}
+
+@misc{ enwiki:1099281087,
+  author = "{Wikipedia contributors}",
+  title = "Binary space partitioning --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Binary_space_partitioning&oldid=1099281087}",
+  note = "[Online; accessed 25-November-2022]"
+}
