changed the word plaka to slab

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -40,7 +40,7 @@
 περιγράφεται στο \cite{lumelsky1985fast}.
 Έστω $p$, $q$ είναι τα σημεία με τη μικρότερη απόσταση 
 για κάποιο ζεύγος πλευρών.
-Το διάνυσμα $\vec{pq}$ ορίζει μια πλάκα (ένα επίπεδο 
+Το διάνυσμα $\vec{pq}$ ορίζει μια πλάκα (\tl{slab}) (ένα επίπεδο 
 κάθετο στο $\vec{pq}$ που διέρχεται από το $p$ και 
 ένα επίπεδο κάθετο στο $\vec{pq}$ που διέρχεται
 από το $q$).
