added a clarification note about 3D triangles

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -29,6 +29,9 @@
 όπου με $\lVert p - q \rVert$ συμβολίζεται η Ευκλείδεια 
 απόσταση των σημείων $p$ και $q$.
 
+\textit{Σημείωση}: Παρακάτω, όπου κάνουμε αναφορά στον όρο "τρίγωνο",
+εννοούμε την τριγωνική περιοχή στον τρισδιάστατο χώρο.
+
 Για τον υπολογισμό της απόστασης δύο τριγώνων του τρισδιάστατου χώρου 
 χρησιμοποιούμε τη ρουτίνα \tl{\texttt{TriDist()}} από το πακέτο 
 \tl{\textit{PQP}} \cite{larsen2014pqp} \cite{larsen1999fast}. 
