Added two more citation for PQP_TriDist()

--- a/report/DOCUMENT/chapter_methodology.tex
+++ b/report/DOCUMENT/chapter_methodology.tex
@@ -34,7 +34,8 @@
 
 Για τον υπολογισμό της απόστασης δύο τριγώνων του τρισδιάστατου χώρου 
 χρησιμοποιούμε τη ρουτίνα \tl{\texttt{TriDist()}} από το πακέτο 
-\tl{\textit{PQP}} \cite{larsen2014pqp} \cite{larsen1999fast}. 
+\tl{\textit{PQP}} \cite{larsen2014pqp} \cite{larsen1999fast} 
+\cite{larsen845311l} \cite{shellshear2014fast}.  
 
 Μια σύντομη περιγραφή της ρουτίνας είναι η ακόλουθη: 
 Αρχικά υπολογίζονται οι αποστάσεις κάθε ζεύγους πλευρών,
