--- a/report/DOCUMENT/references.bib
+++ b/report/DOCUMENT/references.bib
@@ -435,3 +435,23 @@
   howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Binary_space_partitioning&oldid=1099281087}",
   note = "[Online; accessed 25-November-2022]"
 }
+
+@INPROCEEDINGS{larsen845311l,  
+  author={Larsen, E. and Gottschalk, S. and Lin, M.C. and Manocha, D.},  
+  booktitle={Proceedings 2000 ICRA. Millennium Conference. IEEE International Conference on Robotics and Automation. Symposia Proceedings (Cat. No.00CH37065)},   
+  title={Fast distance queries with rectangular swept sphere volumes}, 
+  year={2000},
+  volume={4},  
+  number={},  
+  pages={3719-3726 vol.4},  
+  doi={10.1109/ROBOT.2000.845311}
+}
+
+@article{shellshear2014fast,
+  title={Fast distance queries for triangles, lines, and points using SSE instructions},
+  author={Shellshear, Evan and Ytterlid, Robin},
+  journal={Journal of Computer Graphics Techniques Vol},
+  volume={3},
+  number={4},
+  year={2014}
+}
